--- a/app/src/main/res/layout/crypto_widget.xml
+++ b/app/src/main/res/layout/crypto_widget.xml
@@ -19,14 +19,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="---"
-                android:textColor="#f00"/>
+                android:textColor="#fff"/>
         </LinearLayout>
         <TextView
             android:id="@+id/widgetUpdated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="---"
-            android:textColor="#f00"
+            android:textColor="#fff"
             />
     </LinearLayout>
 
@@ -39,6 +39,6 @@
         android:text="000"
         android:textSize="@dimen/abc_text_size_large_material"
         android:textStyle="bold"
-        android:textColor="#f00"/>
+        android:textColor="#fff"/>
 
 </LinearLayout>
